# retesting

./: .gitmodules
.github/workflows/: build-docker.yml  docker-up.yml
web/: docker-compose.yaml  frpc.toml
web/dashboard/: Dockerfile  README.rst  pyproject.toml
web/dashboard/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
web/dashboard/tftesting_dashboard/: __init__.py
web/dashboard/tftesting_dashboard/templates/: base.html
web/dashboard_backend/: .gitignore  Dockerfile  main.py  pyproject.toml
web/frp_config/: frps.toml
web/terraform/modules/ec2/: main.tf  variables.tf  variables_state.tf
web/terraform/modules/ec2/scripts/: install-docker.sh
web/terraform/modules/ecr/: variables.tf
web/terraform/modules/iam/: variables.tf
web/terraform/modules/iam/policies/: assume-role.json.tftpl
web/terraform/modules/networking/: variables.tf
web/terraform/modules/state/: variables.tf
web/terraform/production/: main.tf  variables.tf
web/terraform/staging/: variables.tf  variables_state.tf
