[project]
name = "dashboard-backend"
version = "0.1.0"
description = "A minimal dashboard backend service"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi[standard]",
    "uvicorn"
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"